set(ARDUINO_CORE_PATH hardware/arduino/avr/cores)
set(ARDUINO_VARIANT_PATH hardware/arduino/avr/variants)
set(INCLUDE_PATH hardware/tools/avr/avr/include)


set(INCLUDE_HEADERS
    ${INCLUDE_PATH}/avr/boot.h
    ${INCLUDE_PATH}/avr/builtins.h
    ${INCLUDE_PATH}/avr/common.h
    ${INCLUDE_PATH}/avr/cpufunc.h
    ${INCLUDE_PATH}/avr/crc16.h
    ${INCLUDE_PATH}/avr/delay.h
    ${INCLUDE_PATH}/avr/eeprom.h
    ${INCLUDE_PATH}/avr/fuse.h
    ${INCLUDE_PATH}/avr/interrupt.h
    ${INCLUDE_PATH}/avr/io.h
    ${INCLUDE_PATH}/avr/io1200.h
    ${INCLUDE_PATH}/avr/io2313.h
    ${INCLUDE_PATH}/avr/io2323.h
    ${INCLUDE_PATH}/avr/io2333.h
    ${INCLUDE_PATH}/avr/io2343.h
    ${INCLUDE_PATH}/avr/io43u32x.h
    ${INCLUDE_PATH}/avr/io43u35x.h
    ${INCLUDE_PATH}/avr/io4414.h
    ${INCLUDE_PATH}/avr/io4433.h
    ${INCLUDE_PATH}/avr/io4434.h
    ${INCLUDE_PATH}/avr/io76c711.h
    ${INCLUDE_PATH}/avr/io8515.h
    ${INCLUDE_PATH}/avr/io8534.h
    ${INCLUDE_PATH}/avr/io8535.h
    ${INCLUDE_PATH}/avr/io86r401.h
    ${INCLUDE_PATH}/avr/io90pwm1.h
    ${INCLUDE_PATH}/avr/io90pwm161.h
    ${INCLUDE_PATH}/avr/io90pwm216.h
    ${INCLUDE_PATH}/avr/io90pwm2b.h
    ${INCLUDE_PATH}/avr/io90pwm316.h
    ${INCLUDE_PATH}/avr/io90pwm3b.h
    ${INCLUDE_PATH}/avr/io90pwm81.h
    ${INCLUDE_PATH}/avr/io90pwmx.h
    ${INCLUDE_PATH}/avr/io90scr100.h
    ${INCLUDE_PATH}/avr/ioa5272.h
    ${INCLUDE_PATH}/avr/ioa5505.h
    ${INCLUDE_PATH}/avr/ioa5790.h
    ${INCLUDE_PATH}/avr/ioa5790n.h
    ${INCLUDE_PATH}/avr/ioa5795.h
    ${INCLUDE_PATH}/avr/ioa5831.h
    ${INCLUDE_PATH}/avr/ioa6285.h
    ${INCLUDE_PATH}/avr/ioa6286.h
    ${INCLUDE_PATH}/avr/ioa6289.h
    ${INCLUDE_PATH}/avr/ioa6612c.h
    ${INCLUDE_PATH}/avr/ioa6613c.h
    ${INCLUDE_PATH}/avr/ioa6614q.h
    ${INCLUDE_PATH}/avr/ioa6616c.h
    ${INCLUDE_PATH}/avr/ioa6617c.h
    ${INCLUDE_PATH}/avr/ioa664251.h
    ${INCLUDE_PATH}/avr/ioat94k.h
    ${INCLUDE_PATH}/avr/iocan128.h
    ${INCLUDE_PATH}/avr/iocan32.h
    ${INCLUDE_PATH}/avr/iocan64.h
    ${INCLUDE_PATH}/avr/iocanxx.h
    ${INCLUDE_PATH}/avr/iom103.h
    ${INCLUDE_PATH}/avr/iom128.h
    ${INCLUDE_PATH}/avr/iom1280.h
    ${INCLUDE_PATH}/avr/iom1281.h
    ${INCLUDE_PATH}/avr/iom1284.h
    ${INCLUDE_PATH}/avr/iom1284p.h
    ${INCLUDE_PATH}/avr/iom1284rfr2.h
    ${INCLUDE_PATH}/avr/iom128a.h
    ${INCLUDE_PATH}/avr/iom128rfa1.h
    ${INCLUDE_PATH}/avr/iom128rfr2.h
    ${INCLUDE_PATH}/avr/iom16.h
    ${INCLUDE_PATH}/avr/iom161.h
    ${INCLUDE_PATH}/avr/iom162.h
    ${INCLUDE_PATH}/avr/iom163.h
    ${INCLUDE_PATH}/avr/iom164.h
    ${INCLUDE_PATH}/avr/iom164a.h
    ${INCLUDE_PATH}/avr/iom164p.h
    ${INCLUDE_PATH}/avr/iom164pa.h
    ${INCLUDE_PATH}/avr/iom165.h
    ${INCLUDE_PATH}/avr/iom165a.h
    ${INCLUDE_PATH}/avr/iom165p.h
    ${INCLUDE_PATH}/avr/iom165pa.h
    ${INCLUDE_PATH}/avr/iom168.h
    ${INCLUDE_PATH}/avr/iom168a.h
    ${INCLUDE_PATH}/avr/iom168p.h
    ${INCLUDE_PATH}/avr/iom168pa.h
    ${INCLUDE_PATH}/avr/iom169.h
    ${INCLUDE_PATH}/avr/iom169a.h
    ${INCLUDE_PATH}/avr/iom169p.h
    ${INCLUDE_PATH}/avr/iom169pa.h
    ${INCLUDE_PATH}/avr/iom16a.h
    ${INCLUDE_PATH}/avr/iom16hva.h
    ${INCLUDE_PATH}/avr/iom16hva2.h
    ${INCLUDE_PATH}/avr/iom16hvb.h
    ${INCLUDE_PATH}/avr/iom16hvbrevb.h
    ${INCLUDE_PATH}/avr/iom16m1.h
    ${INCLUDE_PATH}/avr/iom16u2.h
    ${INCLUDE_PATH}/avr/iom16u4.h
    ${INCLUDE_PATH}/avr/iom2560.h
    ${INCLUDE_PATH}/avr/iom2561.h
    ${INCLUDE_PATH}/avr/iom2564rfr2.h
    ${INCLUDE_PATH}/avr/iom256rfr2.h
    ${INCLUDE_PATH}/avr/iom3000.h
    ${INCLUDE_PATH}/avr/iom32.h
    ${INCLUDE_PATH}/avr/iom323.h
    ${INCLUDE_PATH}/avr/iom324a.h
    ${INCLUDE_PATH}/avr/iom324p.h
    ${INCLUDE_PATH}/avr/iom324pa.h
    ${INCLUDE_PATH}/avr/iom325.h
    ${INCLUDE_PATH}/avr/iom3250.h
    ${INCLUDE_PATH}/avr/iom3250a.h
    ${INCLUDE_PATH}/avr/iom3250p.h
    ${INCLUDE_PATH}/avr/iom3250pa.h
    ${INCLUDE_PATH}/avr/iom325a.h
    ${INCLUDE_PATH}/avr/iom325p.h
    ${INCLUDE_PATH}/avr/iom325pa.h
    ${INCLUDE_PATH}/avr/iom328.h
    ${INCLUDE_PATH}/avr/iom328p.h
    ${INCLUDE_PATH}/avr/iom329.h
    ${INCLUDE_PATH}/avr/iom3290.h
    ${INCLUDE_PATH}/avr/iom3290a.h
    ${INCLUDE_PATH}/avr/iom3290pa.h
    ${INCLUDE_PATH}/avr/iom329a.h
    ${INCLUDE_PATH}/avr/iom329p.h
    ${INCLUDE_PATH}/avr/iom329pa.h
    ${INCLUDE_PATH}/avr/iom32a.h
    ${INCLUDE_PATH}/avr/iom32c1.h
    ${INCLUDE_PATH}/avr/iom32hvb.h
    ${INCLUDE_PATH}/avr/iom32hvbrevb.h
    ${INCLUDE_PATH}/avr/iom32m1.h
    ${INCLUDE_PATH}/avr/iom32u2.h
    ${INCLUDE_PATH}/avr/iom32u4.h
    ${INCLUDE_PATH}/avr/iom32u6.h
    ${INCLUDE_PATH}/avr/iom406.h
    ${INCLUDE_PATH}/avr/iom48.h
    ${INCLUDE_PATH}/avr/iom48a.h
    ${INCLUDE_PATH}/avr/iom48p.h
    ${INCLUDE_PATH}/avr/iom48pa.h
    ${INCLUDE_PATH}/avr/iom64.h
    ${INCLUDE_PATH}/avr/iom640.h
    ${INCLUDE_PATH}/avr/iom644.h
    ${INCLUDE_PATH}/avr/iom644a.h
    ${INCLUDE_PATH}/avr/iom644p.h
    ${INCLUDE_PATH}/avr/iom644pa.h
    ${INCLUDE_PATH}/avr/iom644rfr2.h
    ${INCLUDE_PATH}/avr/iom645.h
    ${INCLUDE_PATH}/avr/iom6450.h
    ${INCLUDE_PATH}/avr/iom6450a.h
    ${INCLUDE_PATH}/avr/iom6450p.h
    ${INCLUDE_PATH}/avr/iom645a.h
    ${INCLUDE_PATH}/avr/iom645p.h
    ${INCLUDE_PATH}/avr/iom649.h
    ${INCLUDE_PATH}/avr/iom6490.h
    ${INCLUDE_PATH}/avr/iom6490a.h
    ${INCLUDE_PATH}/avr/iom6490p.h
    ${INCLUDE_PATH}/avr/iom649a.h
    ${INCLUDE_PATH}/avr/iom649p.h
    ${INCLUDE_PATH}/avr/iom64a.h
    ${INCLUDE_PATH}/avr/iom64c1.h
    ${INCLUDE_PATH}/avr/iom64hve.h
    ${INCLUDE_PATH}/avr/iom64hve2.h
    ${INCLUDE_PATH}/avr/iom64m1.h
    ${INCLUDE_PATH}/avr/iom64rfr2.h
    ${INCLUDE_PATH}/avr/iom8.h
    ${INCLUDE_PATH}/avr/iom8515.h
    ${INCLUDE_PATH}/avr/iom8535.h
    ${INCLUDE_PATH}/avr/iom88.h
    ${INCLUDE_PATH}/avr/iom88a.h
    ${INCLUDE_PATH}/avr/iom88p.h
    ${INCLUDE_PATH}/avr/iom88pa.h
    ${INCLUDE_PATH}/avr/iom8a.h
    ${INCLUDE_PATH}/avr/iom8hva.h
    ${INCLUDE_PATH}/avr/iom8u2.h
    ${INCLUDE_PATH}/avr/iomx8.h
    ${INCLUDE_PATH}/avr/iomxx0_1.h
    ${INCLUDE_PATH}/avr/iomxx4.h
    ${INCLUDE_PATH}/avr/iomxxhva.h
    ${INCLUDE_PATH}/avr/iotn10.h
    ${INCLUDE_PATH}/avr/iotn11.h
    ${INCLUDE_PATH}/avr/iotn12.h
    ${INCLUDE_PATH}/avr/iotn13.h
    ${INCLUDE_PATH}/avr/iotn13a.h
    ${INCLUDE_PATH}/avr/iotn15.h
    ${INCLUDE_PATH}/avr/iotn1634.h
    ${INCLUDE_PATH}/avr/iotn167.h
    ${INCLUDE_PATH}/avr/iotn20.h
    ${INCLUDE_PATH}/avr/iotn22.h
    ${INCLUDE_PATH}/avr/iotn2313.h
    ${INCLUDE_PATH}/avr/iotn2313a.h
    ${INCLUDE_PATH}/avr/iotn24.h
    ${INCLUDE_PATH}/avr/iotn24a.h
    ${INCLUDE_PATH}/avr/iotn25.h
    ${INCLUDE_PATH}/avr/iotn26.h
    ${INCLUDE_PATH}/avr/iotn261.h
    ${INCLUDE_PATH}/avr/iotn261a.h
    ${INCLUDE_PATH}/avr/iotn28.h
    ${INCLUDE_PATH}/avr/iotn4.h
    ${INCLUDE_PATH}/avr/iotn40.h
    ${INCLUDE_PATH}/avr/iotn4313.h
    ${INCLUDE_PATH}/avr/iotn43u.h
    ${INCLUDE_PATH}/avr/iotn44.h
    ${INCLUDE_PATH}/avr/iotn441.h
    ${INCLUDE_PATH}/avr/iotn44a.h
    ${INCLUDE_PATH}/avr/iotn45.h
    ${INCLUDE_PATH}/avr/iotn461.h
    ${INCLUDE_PATH}/avr/iotn461a.h
    ${INCLUDE_PATH}/avr/iotn48.h
    ${INCLUDE_PATH}/avr/iotn5.h
    ${INCLUDE_PATH}/avr/iotn828.h
    ${INCLUDE_PATH}/avr/iotn84.h
    ${INCLUDE_PATH}/avr/iotn841.h
    ${INCLUDE_PATH}/avr/iotn84a.h
    ${INCLUDE_PATH}/avr/iotn85.h
    ${INCLUDE_PATH}/avr/iotn861.h
    ${INCLUDE_PATH}/avr/iotn861a.h
    ${INCLUDE_PATH}/avr/iotn87.h
    ${INCLUDE_PATH}/avr/iotn88.h
    ${INCLUDE_PATH}/avr/iotn9.h
    ${INCLUDE_PATH}/avr/iotnx4.h
    ${INCLUDE_PATH}/avr/iotnx5.h
    ${INCLUDE_PATH}/avr/iotnx61.h
    ${INCLUDE_PATH}/avr/iousb1286.h
    ${INCLUDE_PATH}/avr/iousb1287.h
    ${INCLUDE_PATH}/avr/iousb162.h
    ${INCLUDE_PATH}/avr/iousb646.h
    ${INCLUDE_PATH}/avr/iousb647.h
    ${INCLUDE_PATH}/avr/iousb82.h
    ${INCLUDE_PATH}/avr/iousbxx2.h
    ${INCLUDE_PATH}/avr/iousbxx6_7.h
    ${INCLUDE_PATH}/avr/iox128a1.h
    ${INCLUDE_PATH}/avr/iox128a1u.h
    ${INCLUDE_PATH}/avr/iox128a3.h
    ${INCLUDE_PATH}/avr/iox128a3u.h
    ${INCLUDE_PATH}/avr/iox128a4u.h
    ${INCLUDE_PATH}/avr/iox128b1.h
    ${INCLUDE_PATH}/avr/iox128b3.h
    ${INCLUDE_PATH}/avr/iox128c3.h
    ${INCLUDE_PATH}/avr/iox128d3.h
    ${INCLUDE_PATH}/avr/iox128d4.h
    ${INCLUDE_PATH}/avr/iox16a4.h
    ${INCLUDE_PATH}/avr/iox16a4u.h
    ${INCLUDE_PATH}/avr/iox16c4.h
    ${INCLUDE_PATH}/avr/iox16d4.h
    ${INCLUDE_PATH}/avr/iox16e5.h
    ${INCLUDE_PATH}/avr/iox192a3.h
    ${INCLUDE_PATH}/avr/iox192a3u.h
    ${INCLUDE_PATH}/avr/iox192c3.h
    ${INCLUDE_PATH}/avr/iox192d3.h
    ${INCLUDE_PATH}/avr/iox256a3.h
    ${INCLUDE_PATH}/avr/iox256a3b.h
    ${INCLUDE_PATH}/avr/iox256a3bu.h
    ${INCLUDE_PATH}/avr/iox256a3u.h
    ${INCLUDE_PATH}/avr/iox256c3.h
    ${INCLUDE_PATH}/avr/iox256d3.h
    ${INCLUDE_PATH}/avr/iox32a4.h
    ${INCLUDE_PATH}/avr/iox32a4u.h
    ${INCLUDE_PATH}/avr/iox32c3.h
    ${INCLUDE_PATH}/avr/iox32c4.h
    ${INCLUDE_PATH}/avr/iox32d3.h
    ${INCLUDE_PATH}/avr/iox32d4.h
    ${INCLUDE_PATH}/avr/iox32e5.h
    ${INCLUDE_PATH}/avr/iox384c3.h
    ${INCLUDE_PATH}/avr/iox384d3.h
    ${INCLUDE_PATH}/avr/iox64a1.h
    ${INCLUDE_PATH}/avr/iox64a1u.h
    ${INCLUDE_PATH}/avr/iox64a3.h
    ${INCLUDE_PATH}/avr/iox64a3u.h
    ${INCLUDE_PATH}/avr/iox64a4u.h
    ${INCLUDE_PATH}/avr/iox64b1.h
    ${INCLUDE_PATH}/avr/iox64b3.h
    ${INCLUDE_PATH}/avr/iox64c3.h
    ${INCLUDE_PATH}/avr/iox64d3.h
    ${INCLUDE_PATH}/avr/iox64d4.h
    ${INCLUDE_PATH}/avr/iox8e5.h
    ${INCLUDE_PATH}/avr/lock.h
    ${INCLUDE_PATH}/avr/parity.h
    ${INCLUDE_PATH}/avr/pgmspace.h
    ${INCLUDE_PATH}/avr/portpins.h
    ${INCLUDE_PATH}/avr/power.h
    ${INCLUDE_PATH}/avr/sfr_defs.h
    ${INCLUDE_PATH}/avr/signal.h
    ${INCLUDE_PATH}/avr/signature.h
    ${INCLUDE_PATH}/avr/sleep.h
    ${INCLUDE_PATH}/avr/version.h
    ${INCLUDE_PATH}/avr/wdt.h
    ${INCLUDE_PATH}/avr/xmega.h
    ${INCLUDE_PATH}/compat/deprecated.h
    ${INCLUDE_PATH}/compat/ina90.h
    ${INCLUDE_PATH}/compat/twi.h
    ${INCLUDE_PATH}/util/atomic.h
    ${INCLUDE_PATH}/util/crc16.h
    ${INCLUDE_PATH}/util/delay.h
    ${INCLUDE_PATH}/util/delay_basic.h
    ${INCLUDE_PATH}/util/parity.h
    ${INCLUDE_PATH}/util/setbaud.h
    ${INCLUDE_PATH}/util/twi.h
    ${INCLUDE_PATH}/alloca.h
    ${INCLUDE_PATH}/assert.h
    ${INCLUDE_PATH}/ctype.h
    ${INCLUDE_PATH}/errno.h
    ${INCLUDE_PATH}/inttypes.h
    ${INCLUDE_PATH}/math.h
    ${INCLUDE_PATH}/setjmp.h
    ${INCLUDE_PATH}/stdfix-avrlibc.h
    ${INCLUDE_PATH}/stdint.h
    ${INCLUDE_PATH}/stdio.h
    ${INCLUDE_PATH}/stdlib.h
    ${INCLUDE_PATH}/string.h)

set(ARDUINO_CORE_SRC
    ${ARDUINO_CORE_PATH}/abi.cpp
    ${ARDUINO_CORE_PATH}/Arduino.h
    ${ARDUINO_CORE_PATH}/binary.h
    ${ARDUINO_CORE_PATH}/CDC.cpp
    ${ARDUINO_CORE_PATH}/Client.h
    ${ARDUINO_CORE_PATH}/HardwareSerial.cpp
    ${ARDUINO_CORE_PATH}/HardwareSerial.h
    ${ARDUINO_CORE_PATH}/HardwareSerial0.cpp
    ${ARDUINO_CORE_PATH}/HardwareSerial1.cpp
    ${ARDUINO_CORE_PATH}/HardwareSerial2.cpp
    ${ARDUINO_CORE_PATH}/HardwareSerial3.cpp
    ${ARDUINO_CORE_PATH}/HardwareSerial_private.h
    ${ARDUINO_CORE_PATH}/HID.cpp
    ${ARDUINO_CORE_PATH}/hooks.c
    ${ARDUINO_CORE_PATH}/IPAddress.cpp
    ${ARDUINO_CORE_PATH}/IPAddress.h
    ${ARDUINO_CORE_PATH}/main.cpp
    ${ARDUINO_CORE_PATH}/new.cpp
    ${ARDUINO_CORE_PATH}/new.h
    ${ARDUINO_CORE_PATH}/Print.cpp
    ${ARDUINO_CORE_PATH}/Print.h
    ${ARDUINO_CORE_PATH}/Printable.h
    ${ARDUINO_CORE_PATH}/Server.h
    ${ARDUINO_CORE_PATH}/Stream.cpp
    ${ARDUINO_CORE_PATH}/Stream.h
    ${ARDUINO_CORE_PATH}/Tone.cpp
    ${ARDUINO_CORE_PATH}/Udp.h
    ${ARDUINO_CORE_PATH}/USBAPI.h
    ${ARDUINO_CORE_PATH}/USBCore.cpp
    ${ARDUINO_CORE_PATH}/USBCore.h
    ${ARDUINO_CORE_PATH}/USBDesc.h
    ${ARDUINO_CORE_PATH}/WCharacter.h
    ${ARDUINO_CORE_PATH}/WInterrupts.c
    ${ARDUINO_CORE_PATH}/wiring.c
    ${ARDUINO_CORE_PATH}/wiring_analog.c
    ${ARDUINO_CORE_PATH}/wiring_digital.c
    ${ARDUINO_CORE_PATH}/wiring_private.h
    ${ARDUINO_CORE_PATH}/wiring_pulse.c
    ${ARDUINO_CORE_PATH}/wiring_shift.c
    ${ARDUINO_CORE_PATH}/WMath.cpp
    ${ARDUINO_CORE_PATH}/WString.cpp
    ${ARDUINO_CORE_PATH}/WString.h)


include_directories(${INCLUDE_PATH})
include_directories(${ARDUINO_VARIANT_PATH}/standard)
add_library(ARDUINO_CORE ${ARDUINO_CORE_SRC})

add_library(MPU6050
    mpu6050/MPU6050.h
    mpu6050/MPU6050.cpp)

add_library(I2CDEV
    i2cdev/I2Cdev.h
    i2cdev/I2Cdev.cpp)

add_library(SERVO
    servo/Servo.h
    servo/avr/ServoTimers.h
    servo/avr/Servo.cpp)







